<resources>
    <string name="app_name">MobileApp</string>
    <string name="go_back">go_back</string>
    <string name="login">Login</string>
    <string name="for_free_join_now_and_start_learning">For free, join now and start learning</string>
    <string name="email"><font size="35">Email</font></string>
    <string name="password"><font size="35">Password</font></string>
    <string name="email_title">Email Address</string>
    <string name="password_title">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="not_you_member_signup">Not you member? Signup</string>
    <string name="use_can_use_google_for_sign_in">Use can use Google for sign in</string>
    <string name="signup">Signup</string>
    <string name="first_name">First Name</string>
    <string name="your_first_name">Your First Name</string>
    <string name="last_name">Last Name</string>
    <string name="your_last_name">Your Last Name</string>
    <string name="cont">Continue</string>
    <string name="already_you_member_login">Already you member? Login</string>
    <string name="choose_a_password">Choose a Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confidence_in_your_words">Confidence in your words</string>
    <string name="with_conversation_based_learning_you_ll_be_talking_from_lesson_one">With conversation-based learning, you\'ll be talking from lesson one</string>
    <string name="next">Next</string>
    <string name="skip_onboarding">Skip onboarding</string>
    <string name="take_your_time_to_learn">Take your time to learn</string>
    <string name="develop_a_habit_of_learning_and_make_it_a_part_of_your_daily_routine">Develop a habit of learning and make it a part of your daily routine</string>
    <string name="more">More</string>
    <string name="the_lessons_you_need_to_learn">The lessons you need to learn</string>
    <string name="using_a_variety_of_learning_styles_to_learn_and_retain">Using a variety of learning styles to learn and retain</string>
    <string name="choose_a_language">Choose a language</string>
    <string name="language_select">Language select</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="belarus">Belarus</string>
    <string name="kazakh">Kazakh</string>
    <string name="what_is_your_mother_language">What is your Mother language?</string>
    <string name="choose">Choose</string>
    <string name="avatar">avatar</string>
    <string name="hello_emil">Hello, Emil</string>
    <string name="are_you_ready_for_learning_today">Are you ready for learning today?</string>
    <string name="top_users">Top users</string>
    <string name="vincent_van_gogh">Vincent van Gogh</string>
    <string name="_12_points">12 points</string>
    <string name="dmitri_ivanovich_mendeleev">Dmitri Ivanovich Mendeleev</string>
    <string name="_10_points">10 points</string>
    <string name="_8_points">8 points</string>
    <string name="vlad_tepes">Vlad Tepes</string>
    <string name="guess_the_animal">Guess the animal</string>
    <string name="word_practice">Word practice</string>
    <string name="audition">Audition</string>
    <string name="game">Game</string>
    <string name="your_profile_emil">Your profile, Emil</string>
    <string name="switch_to_dark">Switch to Dark</string>
    <string name="change_mother_language">Change mother language</string>
    <string name="change_your_image">Change your image</string>
    <string name="logout">Logout</string>
    <string name="no_internet_connection">No\n internet connection</string>
    <string name="check_again">Check again</string>
    <string name="guess_the_animal_title">Guess the animal</string>
    <string name="write_who_is_on_image">Write who is on image</string>
    <string name="check">Check</string>
    <string name="holy_molly_that_is_right">Holy Molly! That is Right!</string>
    <string name="eh_wrong_answer_that_is_racoon">Eh? Wrong answer :(\n That is: Racoon</string>
    <string name="try_again">Try again</string>
    <string name="word_practice_title">Word practice</string>
    <string name="muha">Муха</string>
    <string name="safovnik">Садовник</string>
    <string name="gladiolus">Гладиолус</string>
    <string name="sobaka">Собака</string>
    <string name="gardener">gardener</string>
    <string name="listening">Listening</string>
    <string name="cucumber">cucumber</string>
    <string name="kju_k_mb">[ \'kju:kʌmbə ]</string>
    <string name="please_press_button_and_say_this_word_our_service_will_check_your_pronunciation">Please press button and say this word. Our service will check your pronunciation</string>
    <string name="check_my_speech">Check my speech</string>
    <string name="your_result">Your result</string>
    <string name="pupumber">pupumber</string>
    <string name="yay_go_next">Yay! Go next</string>
</resources>