<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple">

        <RelativeLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/page_back"
                android:layout_width="17dp"
                android:layout_height="27dp"
                android:src="@drawable/arrow_left"
                android:contentDescription="@string/go_back" />

            <TextView
                android:id="@+id/loginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listening"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/fredoka_500"
                android:textSize="22sp"/>


        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cucumber"
        android:textColor="?attr/colorSecondary"
        android:gravity="center"
        android:layout_gravity="center"
        android:fontFamily="@font/fredoka_500"
        android:textSize="22sp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kju_k_mb"
        android:textColor="?attr/colorSecondary"
        android:gravity="center"
        android:layout_gravity="center"
        android:fontFamily="@font/fredoka_400"
        android:textSize="15sp"
        />

    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/please_press_button_and_say_this_word_our_service_will_check_your_pronunciation"
        android:textColor="?attr/colorSecondary"
        android:fontFamily="@font/fredoka_500"
        android:textSize="20sp"
        android:gravity="left"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"/>

    <RelativeLayout
        android:layout_width="340dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:gravity="left"
        android:layout_marginTop="10dp">


        <TextView
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_result"
            android:textColor="#363B44"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/fredoka_400"
            android:textSize="15sp" />

        <TextView
            android:padding="15dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/pupumber"
            android:textColor="#EF5DA8"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/fredoka_400"
            android:textSize="15sp"
            android:background="@drawable/gray_input_text"/>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/next"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:cardCornerRadius="50dp"
        app:cardBackgroundColor="#00B5AE"
        android:layout_marginBottom="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center" >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/microphone"
                android:contentDescription="@string/avatar"
                android:layout_gravity="center"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>