<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5BA890">

        <RelativeLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/page_back"
                android:layout_width="17dp"
                android:layout_height="27dp"
                android:src="@drawable/arrow_left"
                android:contentDescription="@string/go_back" />

            <TextView
                android:id="@+id/loginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guess_the_animal_title"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/fredoka_500"
                android:textSize="22sp"/>


        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="340dp"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp">

        <ImageView
            android:layout_width="240dp"
            android:layout_height="180dp"
            android:src="@drawable/animal_correct"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/holy_molly_that_is_right"
            android:textColor="?attr/colorSecondary"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/fredoka_500"
            android:textSize="20sp"
            android:layout_alignParentBottom="true"
            android:gravity="center"/>

    </RelativeLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        app:backgroundTint="@null"
        android:background="@drawable/blue_login_button"
        android:text="@string/next"
        android:textSize="20sp"
        android:fontFamily="@font/fredoka_500"
        android:textColor="@color/white"/>





</LinearLayout>